--- a/wp-content/themes/starkers-html5/css/layout.css
+++ b/wp-content/themes/starkers-html5/css/layout.css
@@ -6,3 +6,35 @@
 .alignleft		{ float: left; margin: 0 20px 20px 0; }
 .alignright		{ float: right; margin: 0 0 20px 20px; }
 .wp-caption		{ border: 1px solid #999; text-align: center; background: #eee; padding: 10px; margin: 10px; }
+
+.gallery {
+	display: block;
+	clear: both;
+	overflow: hidden;
+	margin: 0 auto;
+}
+.gallery .gallery-row {
+	display:block;
+	clear: both;
+	overflow: hidden;
+	margin: 0;
+}
+.gallery .gallery-item {
+	overflow: hidden;
+	float: left;
+	margin: 0;
+	text-align: center;
+	list-style: none;
+	padding: 0;
+	position: absolute
+	bottom: 0
+}
+.gallery .gallery-item img, .gallery .gallery-item img.thumbnail {
+	max-width: 89%;
+	height: auto;
+	padding: 1%;
+	margin: 0 auto;
+}
+.gallery-caption {
+	margin-left: 0;
+}
